# mkdocs-material-adr

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  commitlint.config.js  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: demo.yml  pre-commit.yml  semver_build_publish.yml
0001-draft/: index.html
0002-proposed/: index.html
0003-accepted/: index.html
0004-rejected/: index.html
0005-superseded/: index.html
0006-test/: index.html
0007-accepted/: index.html
0008-all/: index.html
adr/sub/: index.html
adr/sub/0001-draft/: index.html
adr/sub/0002-proposed/: index.html
adr/sub/0003-accepted/: index.html
adr/sub/0004-rejected/: index.html
adr/sub/0005-superseded/: index.html
adr/sub/0006-test/: index.html
adr/sub/0007-accepted/: index.html
adr/sub/0008-all/: index.html
docs/: 0001-draft.md  0002-proposed.md  0003-accepted.md  0004-rejected.md  0005-superseded.md  0006-test.md  index.md
docs/adr/sub/: 0001-draft.md  0002-proposed.md  0003-accepted.md  0004-rejected.md  0007-accepted.md  0008-all.md  index.md
mkdocs_material_adr/: base_adr.html  main.html  mkdocs_theme.yml
mkdocs_material_adr/partials/: adr.html  content.html
mkdocs_material_adr/plugins/graph/: plugin.py
mkdocs_material_adr/stylesheets/: adr.css
search/: search_index.json
stylesheets/: adr.css
